syntax = "proto3";

package utility;

service File {
    rpc ParseXlsx (ParseXlsxRequest) returns (Reply) {}
}

message ParseXlsxRequest {
    string file_name = 1;
}

message Reply {
    string data = 1;
}
